# pxu-gui-long

./: .gitignore  Cargo.toml  build-win-release.sh  build-win.sh  cargo-watch.sh  index.html  pxu-gui.js  pxu-gui_bg.wasm  sw.js  trunk-serve.sh  tst
.github/workflows/: pages.yml  rust.yml
make-paths/: Cargo.toml
make-paths/src/: lib.rs  main.rs  paths.rs
pxu/: Cargo.toml
pxu-figures/: Cargo.toml
pxu-figures/src/: cache.rs  fig_compiler.rs  fig_writer.rs  figures.rs  main.rs  utils.rs
pxu-gui/: Cargo.toml  index.html
pxu-gui/src/: anim.rs  app.rs  arguments.rs  frame_history.rs  gui_settings.rs  main.rs  plot.rs  ui_state.rs
pxu/src/: contours.rs  cut.rs  interpolation.rs  kinematics.rs  lib.rs  nr.rs  path.rs  point.rs  pxu.rs  state.rs
src/: app.rs  kinematics.rs  lib.rs  main.rs  nr.rs  pxu.rs  pxu2.rs
