[package]
name = "make-paths"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4.6"
tracing-subscriber = "0.3"
itertools = "0.10.5"
num = "0.4.0"
md5 = "0.7.0"
pxu = { path = "../pxu" }
indicatif = "0.17.3"
clap = { version = "4.2.2", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.95"
