[package]
name = "pxu_gui"
version = "0.1.0"
authors = ["Olof Ohlsson Sax <olof.ohlsson.sax@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
num = "0.4.0"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
log = "0.4.6"
itertools = "0.10.5"
chrono = { version = "0.4", features = [
    "js-sys",
    "wasmbind",
    "clock",
    "std",
], default-features = false }

pxu = { path = "../pxu" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
