[package]
name = "pxu"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
egui = ["dep:egui"]

[dependencies]
log = "0.4.6"
itertools = "0.10.5"
num = { version = "0.4.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
egui = { version = "0.20.0", optional = true }
